04-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: workshop
  labels:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/part-of: kubernetes-workshop
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: podinfo
  ports:
    - name: http
      port: 9898
      targetPort: http
      protocol: TCP
