04-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: workshop
  labels:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/part-of: kubernetes-workshop
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  name: http
